Updated Fishing Added SecondaryItems Added Webhooks Added Debug button Added Variables resetting on script stop.